Updating README.md Adding Jackson module to pom.xml